1.1 - 1.2
-- Added abiilty for services to be undeployed
-- Added ability to have resources be persisted
	-- using XMLPersistanceHelper customized from globus
-- Renamed some service files so that they all now start with the service name
	-- BaseResourceBase
	-- BaseResourceHome
	-- ResourceConfiguration
	-- ServiceConfiguration
-- Moved constants file to common so that client and service can both use them
-- Now using jaxmejs 0.5.2 with JAXME-77 patch applied
-- Added ws-notification support as a resource framework option
-- Added support for configuring resource framework options from a list of options
-- Fixed problems with finding first letter upper cased methods for addition and removal
-- Fixed problems when having introduce imported methods that have no package for the return type (void)
-- Refactored the Resource framework to be one set of templates instead of three
	- caused changes to the services.xsd to support the new way of describing the resource framework options as a list instead of one string
	

1.0 - 1.1
-- Added a new target in the service build file which enables fixing the soap bindings to work with custom serialization.
-- Added property "perform.index.service.registration" to the deploy.properties to enable or disable index service registration.
-- Added two new properties in the deploy.properties enabling the metadata pub/sub timing to be controlled.
	--index.service.registration.refresh_seconds=600
	--index.service.index.refresh_milliseconds=30000
-- Added "dev" build.xml and build-deploy.xml which the user can freely edit without expecting changes by updates
-- Moved ant-contrib.jar to ext/lib in the service instead of lib because the service itself does not need that jar as it is only used for building
-- Created a soap binding fix that will enable us to use custom serialization of "some" types of a schema and added it to the services build process.